Fixed overlapping footer
Footer would overlap with content, not anymore!

--- a/images/public/assets/scss/themes/skematik/_body.scss
+++ b/images/public/assets/scss/themes/skematik/_body.scss
@@ -19,3 +19,7 @@ body{
 a{
 	cursor: pointer;
 }
+
+section[ui-view='pageContent']{
+	min-height: calc(100vh - 447px);
+}
